XMLtoCSV/objects/unpackaged/objects/Data_Change_Request_vod__c.object
<CustomObject>
    <description>Data change request header</description>
    <fields>
        <fullName>Account_External_ID_vod__c</fullName>
        <description>Account external ID.</description>
        <label>Account External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account to be modified, or parent Account of other records being modified.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Data Change Requests</relationshipLabel>
        <relationshipName>Data_Change_Requests_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_External_ID_vod__c</fullName>
        <description>Address external ID.</description>
        <label>Address External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Address to be modified.</description>
        <label>Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Data Change Requests</relationshipLabel>
        <relationshipName>Data_Change_Requests_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Account_External_ID_vod__c</fullName>
        <description>Child Account External ID</description>
        <label>Child Account External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Child account to be modified.</description>
        <label>Child Account</label>
        <referenceTo>Child_Account_vod__c</referenceTo>
        <relationshipLabel>Data Change Requests</relationshipLabel>
        <relationshipName>Data_Change_Requests_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Mapping_vod__c</fullName>
        <description>Contains the country code for the mapping to be used when processing this DCR</description>
        <label>Country Mapping</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCR_External_ID_vod__c</fullName>
        <description>External Data Change Request ID</description>
        <externalId>true</externalId>
        <label>DCR External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date_Time_vod__c</fullName>
        <description>Date and time DCR was submitted.</description>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_vod__c</fullName>
        <description>Details of any errors that occurred during outbound DCR requests to Veeva Network, or inbound DCR updates from Veeva Network. Errors are cleared after DCR is successfully processed.</description>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Status_vod__c</fullName>
        <description>Data change request status in Customer Master</description>
        <label>External Status</label>
        <picklist>
            <picklistValues>
                <fullName>CHANGE_NEW</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CHANGE_PENDINGREVIEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANGE_PARTIALLYPROCESSED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANGE_PROCESSED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANGE_CANCELLED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Time the record was created on mobile device.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Last_Modified_Datetime_vod__c</fullName>
        <description>Last time modified on a mobile device.</description>
        <label>Mobile Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Network_Customer_Master_Mode_vod__c</fullName>
        <description>Contains a value indicating where the DCR should be sent for processing</description>
        <label>Network Customer Master Mode</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_vod__c</fullName>
        <description>User notes.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Data_Change_Request_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to parent DCR. Used only if multiple DCRs are created in a single step. Account DCR is always a parent. Other DCRs linked to it.</description>
        <label>Parent Data Change Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Account_vod</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Data_Change_Request_vod__c</referenceTo>
        <relationshipLabel>Data Change Requests</relationshipLabel>
        <relationshipName>Data_Change_Requests_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Note_vod__c</fullName>
        <description>Notes returned from Veeva Network.</description>
        <label>Resolution Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Datetime_vod__c</fullName>
        <description>Time the processed record was received from Customer Master.</description>
        <label>Response Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Result_vod__c</fullName>
        <description>DCR result returned from Customer Master.</description>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>CHANGE_PARTIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANGE_ACCEPTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANGE_REJECTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANGE_MODIFIED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANGE_ALREADYAPPLIED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sent_Datetime_vod__c</fullName>
        <description>Time the record has been sent to Customer Master for approval.</description>
        <label>Sent Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Data change request status.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Data change request type.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Delete_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Data Change Request</label>
    <nameField>
        <displayFormat>DCR{000000000}</displayFormat>
        <label>Data Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Change Requests</pluralLabel>
    <recordTypes>
        <fullName>Account_vod</fullName>
        <active>true</active>
        <description>Account Data Change Request</description>
        <label>Account_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Address_vod</fullName>
        <active>true</active>
        <description>Address Data Change Request</description>
        <label>Address_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Child_Account_vod</fullName>
        <active>true</active>
        <description>Child Account Data Change Request</description>
        <label>Child_Account_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>